movement of player div stabilized,body overflow fixed

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,10 +1,9 @@
-* {
+html,
+body {
   margin: 0;
   padding: 0;
-}
-
-body {
-  background-color: moccasin;
+  height: 100%;
+  overflow: hidden;
 }
 
 #board {
